--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -97,6 +97,7 @@
           <li><a href="pemasukan.html">Pemasukan</a></li>
           <li><a href="pengeluaran.html">Pengeluaran</a></li>
           <li><a href="produk.html">Produk</a></li>
+          <li><a href="produkList.html">List Produk</a></li>
           <li><a href="karyawan.html">Karyawan</a></li>
         </ul>
       </div>
