--- a/frontend/produk.html
+++ b/frontend/produk.html
@@ -17,6 +17,7 @@
           <li><a href="pemasukan.html">Pemasukan</a></li>
           <li><a href="pengeluaran.html">Pengeluaran</a></li>
           <li class="active"><a href="produk.html">Produk</a></li>
+          <li><a href="produkList.html">List Produk</a></li>
           <li><a href="karyawan.html">Karyawan</a></li>
         </ul>
       </div>
