--- a/frontend/pemasukan.html
+++ b/frontend/pemasukan.html
@@ -54,6 +54,7 @@
           <li class="active"><a href="pemasukan.html">Pemasukan</a></li>
           <li><a href="pengeluaran.html">Pengeluaran</a></li>
           <li><a href="produk.html">Produk</a></li>
+          <li><a href="produkList.html">List Produk</a></li>
           <li><a href="karyawan.html">Karyawan</a></li>
         </ul>
       </div>
