--- a/frontend/produkList.html
+++ b/frontend/produkList.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="./style/dashboard.css" />
+    <title>Daftar Produk</title>
+    <link rel="stylesheet" href="./style/produk.css" />
   </head>
+
   <body>
     <div class="main-container">
       <!-- Sidebar -->
       <div class="sidebar">
         <h2>RekapKeu</h2>
         <ul>
-          <li class="active"><a href="dashboard.html">Dashboard</a></li>
+          <li><a href="dashboard.html">Dashboard</a></li>
           <li><a href="pemasukan.html">Pemasukan</a></li>
           <li><a href="pengeluaran.html">Pengeluaran</a></li>
           <li><a href="produk.html">Produk</a></li>
-          <li><a href="produkList.html">List Produk</a></li>
+          <li class="active"><a href="produkList.html">List Produk</a></li>
           <li><a href="karyawan.html">Karyawan</a></li>
         </ul>
       </div>
-      <!-- Main Content Area -->
+
+      <!-- Main Content -->
       <div class="content">
         <!-- Navbar -->
         <div class="navbar">
@@ -36,10 +38,22 @@
             </div>
           </div>
         </div>
-        <!-- Dashboard Summary -->
-        <div class="dashboard-summary">
-          <center><div class="dashboard-title">Dashboard RekapKeu</div></center>
-          <div class="card-grid" id="summaryContainer">Loading...</div>
+
+        <!-- Container -->
+        <div class="container">
+          <h2>Daftar Produk</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Nama Produk</th>
+                <th>Harga</th>
+                <th>Deskripsi</th>
+                <th>Foto</th>
+              </tr>
+            </thead>
+            <tbody id="productTableBody"></tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -54,7 +68,7 @@
         window.location.href = "login.html";
       }
 
-      // Fungsi decode JWT untuk dapatkan user info
+      // Decode JWT untuk dapatkan data user
       function parseJwt(token) {
         try {
           const base64Url = token.split(".")[1];
@@ -78,10 +92,12 @@
         window.location.href = "login.html";
       }
 
-      // Set nama dan inisial avatar di navbar sesuai user login
+      // Simpan userId login
+      const loggedUserId = decoded.id;
+
+      // Set nama user dan inisial avatar di navbar
       const userName = decoded.name || "User";
       document.querySelector(".profile-name").textContent = userName;
-
       function getInitials(name) {
         return name
           .split(" ")
@@ -90,82 +106,68 @@
           .toUpperCase()
           .slice(0, 2);
       }
-
       document.querySelector(".profile-avatar").textContent =
         getInitials(userName);
 
-      // Fetch summary (tetap pakai userId=1 seperti kode awal)
-      async function fetchSummary() {
-        // Tidak perlu kirim user_id, agar backend hitung semua data global
-        const res = await fetch(`${BASE_URL}/dashboard-summary`);
+      // Fetch semua produk
+      async function fetchProducts() {
+        const res = await fetch(`${BASE_URL}/product`);
         const data = await res.json();
+        const tbody = document.getElementById("productTableBody");
+        tbody.innerHTML = "";
 
-        if (!res.ok) {
-          document.getElementById("summaryContainer").innerText =
-            "Gagal mengambil data.";
-          return;
-        }
+        (data.data || []).forEach((product, idx) => {
+          const fotoSrc = product.foto
+            ? `http://localhost:5000/uploads/${product.foto}`
+            : "";
 
-        const html = `
-    <div class="card income">
-      <div class="card-label">Pendapatan (Hari Ini)</div>
-      <div class="card-value">Rp ${data.incomeToday.toLocaleString()}</div>
-    </div>
-    <div class="card income">
-      <div class="card-label">Total Pendapatan</div>
-      <div class="card-value">Rp ${data.totalIncome.toLocaleString()}</div>
-    </div>
-    <div class="card expense">
-      <div class="card-label">Pengeluaran (Hari Ini)</div>
-      <div class="card-value">Rp ${data.expenseToday.toLocaleString()}</div>
-    </div>
-    <div class="card expense">
-      <div class="card-label">Total Pengeluaran</div>
-      <div class="card-value">Rp ${data.totalExpense.toLocaleString()}</div>
-    </div>
-    <div class="card balance">
-      <div class="card-label">Sisa Uang</div>
-      <div class="card-value">Rp ${data.saldo.toLocaleString()}</div>
-    </div>
-    <div class="card products">
-      <div class="card-label">Total Produk</div>
-      <div class="card-value">${data.totalProducts}</div>
-    </div>
-    <div class="card employees">
-      <div class="card-label">Karyawan</div>
-      <div class="card-value">${data.totalEmployees}</div>
-    </div>
-  `;
-        document.getElementById("summaryContainer").innerHTML = html;
+          const tr = document.createElement("tr");
+          tr.innerHTML = `
+            <td>${idx + 1}</td>
+            <td>${product.nama_produk}</td>
+            <td>Rp ${Number(product.harga).toLocaleString()}</td>
+            <td>${product.deskripsi || "-"}</td>
+            <td>${
+              fotoSrc
+                ? `<img src="${fotoSrc}" alt="Foto Produk" width="100" />`
+                : "-"
+            }</td>
+          `;
+          tbody.appendChild(tr);
+        });
       }
 
-      fetchSummary();
+      // Load awal halaman
+      document.addEventListener("DOMContentLoaded", () => {
+        fetchProducts();
+      });
 
-      // Dropdown navbar profile (klik, bukan hover)
+      // Dropdown navbar profile
       document.addEventListener("DOMContentLoaded", () => {
         const dropdown = document.querySelector(".navbar .profile-dropdown");
-
         dropdown.addEventListener("click", (e) => {
           e.stopPropagation();
           dropdown.classList.toggle("active");
         });
-
         document.addEventListener("click", () => {
           dropdown.classList.remove("active");
         });
 
-        // Klik Profil ke halaman Kelola Admin
-        document.getElementById("adminPageBtn").onclick = function (e) {
-          e.preventDefault();
-          window.location.href = "admin.html";
-        };
-
-        // Logout
-        document.getElementById("logoutBtn").onclick = function (e) {
-          e.preventDefault();
-          localStorage.removeItem("token");
-          window.location.href = "login.html";
-        };
+        const adminPageBtn = document.getElementById("adminPageBtn");
+        if (adminPageBtn) {
+          adminPageBtn.onclick = function (e) {
+            e.preventDefault();
+            window.location.href = "admin.html";
+          };
+        }
+        const logoutBtn = document.getElementById("logoutBtn");
+        if (logoutBtn) {
+          logoutBtn.onclick = function (e) {
+            e.preventDefault();
+            localStorage.removeItem("token");
+            window.location.href = "login.html";
+          };
+        }
       });
     </script>
   </body>
