--- a/frontend/produk.html
+++ b/frontend/produk.html
@@ -85,7 +85,9 @@
     </div>
 
     <script>
-      const BASE_URL = "http://localhost:5000/api";
+      // const BASE_URL = "http://localhost:5000/api";
+      const BASE_URL =
+        "https://rekapkeu-rekapkeube-525057870643.us-central1.run.app/api";
 
       // Ambil token dari localStorage
       const token = localStorage.getItem("token");
@@ -157,9 +159,8 @@
           }
 
           const fotoSrc = product.foto
-            ? `http://localhost:5000/uploads/${product.foto}`
+            ? `https://rekapkeu-rekapkeube-525057870643.us-central1.run.app/uploads/${product.foto}`
             : "";
-
           const tr = document.createElement("tr");
           tr.innerHTML = `
             <td>${idx + 1}</td>
