--- a/frontend/register.html
+++ b/frontend/register.html
@@ -198,7 +198,8 @@
     </div>
 
     <script>
-      const BASE_URL = "http://localhost:5000/api";
+      const BASE_URL =
+        "https://rekapkeu-rekapkeube-525057870643.us-central1.run.app/api";
 
       document.getElementById("registerForm").onsubmit = async function (e) {
         e.preventDefault();
