--- a/frontend/login.html
+++ b/frontend/login.html
@@ -190,7 +190,9 @@
     </div>
 
     <script>
-      const BASE_URL = "http://localhost:5000/api";
+      // const BASE_URL = "http://localhost:5000/api";
+      const BASE_URL =
+        "https://rekapkeu-rekapkeube-525057870643.us-central1.run.app/api";
 
       document.getElementById("loginForm").onsubmit = async function (e) {
         e.preventDefault();
