--- a/frontend/pengeluaran.html
+++ b/frontend/pengeluaran.html
@@ -117,7 +117,9 @@
     </div>
 
     <script>
-      const BASE_URL = "http://localhost:5000/api";
+      // const BASE_URL = "http://localhost:5000/api";
+      const BASE_URL =
+        "https://rekapkeu-rekapkeube-525057870643.us-central1.run.app/api";
 
       // Ambil token dari localStorage
       const token = localStorage.getItem("token");
